--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Managers\EventManager.cs" />
     <Compile Include="Managers\UserManager.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\EventsViewModels.cs" />
     <Compile Include="Models\EventViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
