--- a/Capstone/Web.config
+++ b/Capstone/Web.config
@@ -5,12 +5,13 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Capstone-20150201112629.mdf;Initial Catalog=aspnet-Capstone-20150201112629;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="Tables" connectionString="data source=(LocalDb)\v11.0;initial catalog=Capstone.Data.Tables;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Entities" connectionString="metadata=res://*/Data.TestingTables.csdl|res://*/Data.TestingTables.ssdl|res://*/Data.TestingTables.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\v11.0;initial catalog=Capstone.Data.Tables;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
